update add total
